--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@ venv/
 .idea/
 __pycache__/
 S1Result/
+S2Result/
+S3Result/
+S4Result/
+S5Result/
+S6Result/
+C1Result/
+C2Result/
+C3Result/
+C4Result/
+C5Result/
+C6Result/
